int - Build using debug to correctly indicate beta...
... status

---

Revert the release workflow part and set the N.Core packaging status to
true if TP is released.

---

Type: int
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
         run: dotnet nuget add source --username AptiviCEO --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Aptivi/index.json"
       - name: Release Asset Preparation
         run: |
-          cmd.exe /c "tools\build.cmd Release -p:ContinuousIntegrationBuild=true"
+          cmd.exe /c "tools\build.cmd Debug -p:ContinuousIntegrationBuild=true"
           cmd.exe /c "tools\pack.cmd"
           cmd.exe /c "tools\docgen.cmd"
           cmd.exe /c "tools\docgen-pack.cmd"
