dcp - Revert the debug status
---

We've reverted the debug status and modified the package files to bring
back the "dev" specifier.

This marks as the start of the real development, but, this week, plans are
being revised.

---

Type: dcp
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/.gitlab/workflows/release.yml
+++ b/.gitlab/workflows/release.yml
@@ -12,7 +12,7 @@ prepare_job:
     - 'apt update'
     - 'apt -y install make zip glab'
     - 'dotnet tool install --global docfx'
-    - 'make dbg-ci'
+    - 'make rel-ci'
     - './tools/pack.sh'
     - 'make doc'
     - './tools/docgen-pack.sh'
@@ -89,8 +89,8 @@ launchpadppa_job:
     - 'mv debian ..'
     - 'mv .github ..'
     - 'mv .gitlab ..'
-    - 'tar cfv ../nitrocid-28_4.0.28.18-0.2.0.0~beta.orig.tar .'
-    - 'xz ../nitrocid-28_4.0.28.18-0.2.0.0~beta.orig.tar'
+    - 'tar cfv ../nitrocid-28_4.0.28.18-0.2.0.0.orig.tar .'
+    - 'xz ../nitrocid-28_4.0.28.18-0.2.0.0.orig.tar'
     - 'mv ../debian .'
     - 'debuild -S -sa'
     - 'dput apt-ppa ../nitrocid-28_*_source.changes'
