--- a/.github/workflows/build-ppa-package-with-lintian.yml
+++ b/.github/workflows/build-ppa-package-with-lintian.yml
@@ -27,9 +27,6 @@ jobs:
           sudo NEEDRESTART_SUSPEND=1 apt update
           sudo NEEDRESTART_SUSPEND=1 apt install devscripts debhelper-compat dput build-essential equivs
           sudo NEEDRESTART_SUSPEND=1 mk-build-deps -i
-
-      - name: Add GitHub Package Registry to get access to beta builds
-        run: dotnet nuget add source --username AptiviCEO --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Aptivi/index.json"
         
       - name: Initialize offline package
         run: |
@@ -40,8 +37,8 @@ jobs:
         run: |
           mv debian ..
           mv .github ..
-          tar cfv ../nitrocid-28_4.0.28.18-0.2.0.0~beta.orig.tar .
-          xz ../nitrocid-28_4.0.28.18-0.2.0.0~beta.orig.tar
+          tar cfv ../nitrocid-28_4.0.28.18-0.2.0.0.orig.tar .
+          xz ../nitrocid-28_4.0.28.18-0.2.0.0.orig.tar
           mv ../debian .
 
       - name: Build package
