--- a/.github/workflows/pushppa.yml
+++ b/.github/workflows/pushppa.yml
@@ -63,8 +63,8 @@ jobs:
         run: |
           mv debian ..
           mv .github ..
-          tar cfv ../nitrocid-28_4.0.28.18-0.2.0.0~beta.orig.tar .
-          xz ../nitrocid-28_4.0.28.18-0.2.0.0~beta.orig.tar
+          tar cfv ../nitrocid-28_4.0.28.18-0.2.0.0.orig.tar .
+          xz ../nitrocid-28_4.0.28.18-0.2.0.0.orig.tar
           mv ../debian .
 
       - name: Build source package
