--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,7 +2,7 @@
     <!-- KS General Information -->
     <PropertyGroup>
         <!-- Versioning and some info to be installed to all the Nitrocid projects, including the addons -->
-        <Version>0.2.0.0-beta</Version>
+        <Version>0.2.0.0</Version>
         <Copyright>Copyright (c) Aptivi 2018-2025</Copyright>
         <Company>Aptivi</Company>
         <Product>Nitrocid</Product>
@@ -63,7 +63,7 @@
         <Optimize>true</Optimize>
         <Optimize Condition="'$(Configuration)' == 'Debug'">false</Optimize>
         <NitrocidReleaseSpecifier>REL</NitrocidReleaseSpecifier>
-        <NitrocidReleaseSpecifier Condition="'$(Configuration)' == 'Debug'">BETA</NitrocidReleaseSpecifier>
+        <NitrocidReleaseSpecifier Condition="'$(Configuration)' == 'Debug'">DEV</NitrocidReleaseSpecifier>
         <DefineConstants>SPECIFIER$(NitrocidReleaseSpecifier);$(NitrocidFlags.Replace(",",";"))</DefineConstants>
         <NoWarn>$(NoWarn);NU1605</NoWarn>
     </PropertyGroup>
