--- a/public/Nitrocid.Templates/templates/KSMod/KSMod.csproj
+++ b/public/Nitrocid.Templates/templates/KSMod/KSMod.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nitrocid.Base" Version="0.2.0.0-beta" />
+    <PackageReference Include="Nitrocid.Base" Version="0.2.0.0" />
   </ItemGroup>
 
 </Project>
