add - Added new localization for available keys
---

We've added a new localization entry for available keys.

---

Type: add
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Locales/Nitrocid.Locales.csproj
+++ b/public/Nitrocid.Locales/Nitrocid.Locales.csproj
@@ -65,6 +65,9 @@
     <EmbeddedResource Include="..\..\public\Nitrocid\Resources\Themes\*.json" Visible="false">
       <LogicalName>%(EmbeddedResource.FullPath)</LogicalName>
     </EmbeddedResource>
+    <EmbeddedResource Include="..\..\public\Nitrocid.Addons.Essentials\**\Resources\*Settings.json" Visible="false">
+      <LogicalName>%(EmbeddedResource.FullPath)</LogicalName>
+    </EmbeddedResource>
     <EmbeddedResource Include="..\..\public\Nitrocid.Addons\**\Resources\*Settings.json" Visible="false">
       <LogicalName>%(EmbeddedResource.FullPath)</LogicalName>
     </EmbeddedResource>
