upd - Updated to first Terminaux 8.0 int preview
---

We've updated the Terminaux dependency to the first build of Terminaux 8.0
built straight from the CI.

---

Type: upd
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/private/Nitrocid.Tests/Nitrocid.Tests.csproj
+++ b/private/Nitrocid.Tests/Nitrocid.Tests.csproj
@@ -49,7 +49,7 @@
 
   <ItemGroup>
     <PackageReference Include="Shouldly" Version="4.3.0" />
-    <PackageReference Include="Terminaux" Version="7.0.3" />
+    <PackageReference Include="Terminaux" Version="8.0.0-20250913183200" />
   </ItemGroup>
 
   <ItemGroup>
