imp - Changed links to GitHub
---

We've changed all links back to GitHub from GitLab.

---

Type: imp
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -13,7 +13,7 @@
         <WarningsAsErrors>CS9057,CS8002,nullable</WarningsAsErrors>
         <EnableSourceControlManagerQueries>true</EnableSourceControlManagerQueries>
         <SignAssembly>True</SignAssembly>
-        <RepositoryUrl>https://gitlab.com/aptivi/main/Nitrocid.git</RepositoryUrl>
+        <RepositoryUrl>https://github.com/Aptivi/Nitrocid.git</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
         <EmbedUntrackedSources>true</EmbedUntrackedSources>
