fix - Fixed build failure due to Terminaux 8.0
---

We've added the two entries for Terminaux packages.

---

Type: fix
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Images.Icons/Nitrocid.Extras.Images.Icons.csproj
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Images.Icons/Nitrocid.Extras.Images.Icons.csproj
@@ -9,6 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="Terminaux.Images.Icons" Version="8.0.0-20250913183200" />
+    
+    <!-- Remove below once Terminaux 8.0 releases -->
+    <PackageReference Include="Terminaux.Images" Version="8.0.0-20250913183200" />
+    <PackageReference Include="Terminaux" Version="8.0.0-20250913183200" />
   </ItemGroup>
 
   <ItemGroup>
