ref - Relocated the Nitrocid Lite detector target
---

Type: ref
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Nitrocid.Extras.UnitConv.csproj
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.UnitConv/Nitrocid.Extras.UnitConv.csproj
@@ -18,5 +18,5 @@
   </ItemGroup>
 
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
-  <Import Project="..\NitrocidLiteDetector.targets" Condition="'$(NKSLITE)' == 'true'" />
+  <Import Project="..\..\NitrocidLiteDetector.targets" Condition="'$(NKSLITE)' == 'true'" />
 </Project>
