fix - Fixed wrong variable for password mask reade...
...r

---

We've fixed the wrong variable being used for the password mask reader.

---

Type: fix
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Base/Resources/Settings/SettingsEntries.json
+++ b/public/Nitrocid.Base/Resources/Settings/SettingsEntries.json
@@ -1407,7 +1407,7 @@
                     {
                         "Name": "NKS_SETTINGS_KERNEL_MISC_AESTHETICS_MASKCHARREADER_NAME",
                         "Type": "SChar",
-                        "Variable": "CurrentMask",
+                        "Variable": "CurrentMaskReader",
                         "Description": "NKS_SETTINGS_KERNEL_MISC_AESTHETICS_MASKCHARREADER_DESC"
                     },
                     {
