--- a/public/Nitrocid.Addons.Essentials/Nitrocid.ScreensaverPacks/Resources/AddonSaverSettings.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.ScreensaverPacks/Resources/AddonSaverSettings.json
@@ -6522,8 +6522,8 @@
             {
                 "Name": "NKS_SCREENSAVERPACKS_MAZER_SETTINGS_NEWMAZE_NAME",
                 "Type": "SInt",
-                "Variable": "NoiseNewScreenDelay",
-                "Description": "NKS_SCREENSAVERPACKS_NOISE_SETTINGS_NEWSCREENDELAY_DESC"
+                "Variable": "MazerNewMazeDelay",
+                "Description": "NKS_SCREENSAVERPACKS_MAZER_SETTINGS_NEWMAZE_DESC"
             },
             {
                 "Name": "NKS_SCREENSAVERPACKS_MAZER_SETTINGS_GENSPEED_NAME",
