fix - Fixed false positives in loc checker
---

We have fixed false positives in the locales checker by using the assembly
name from the relative path.

---

Type: fix
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/private/Nitrocid.LocaleChecker/Nitrocid.LocaleChecker.csproj
+++ b/private/Nitrocid.LocaleChecker/Nitrocid.LocaleChecker.csproj
@@ -49,25 +49,25 @@
     </EmbeddedResource>
     
     <EmbeddedResource Include="..\..\public\Nitrocid.Base\Resources\Settings\*.json" Visible="false">
-      <LogicalName>%(EmbeddedResource.RelativeDir)|%(EmbeddedResource.FullPath)</LogicalName>
+      <LogicalName>%(EmbeddedResource.RelativeDir)?%(EmbeddedResource.FullPath)</LogicalName>
     </EmbeddedResource>
     <EmbeddedResource Include="..\..\public\Nitrocid.Base\Resources\Themes\*.json" Visible="false">
-      <LogicalName>%(EmbeddedResource.RelativeDir)|%(EmbeddedResource.FullPath)</LogicalName>
+      <LogicalName>%(EmbeddedResource.RelativeDir)?%(EmbeddedResource.FullPath)</LogicalName>
     </EmbeddedResource>
     <EmbeddedResource Include="..\..\public\Nitrocid.Addons\**\Resources\*Settings.json" Visible="false">
-      <LogicalName>%(EmbeddedResource.RelativeDir)|%(EmbeddedResource.FullPath)</LogicalName>
+      <LogicalName>%(EmbeddedResource.RelativeDir)?%(EmbeddedResource.FullPath)</LogicalName>
     </EmbeddedResource>
     <EmbeddedResource Include="..\..\public\Nitrocid.Addons\Nitrocid.ThemePacks\Resources\Themes\*.json" Visible="false">
-      <LogicalName>%(EmbeddedResource.RelativeDir)|%(EmbeddedResource.FullPath)</LogicalName>
+      <LogicalName>%(EmbeddedResource.RelativeDir)?%(EmbeddedResource.FullPath)</LogicalName>
     </EmbeddedResource>
     <EmbeddedResource Include="..\..\public\Nitrocid.Addons.Essentials\**\Resources\*Settings.json" Visible="false">
-      <LogicalName>%(EmbeddedResource.RelativeDir)|%(EmbeddedResource.FullPath)</LogicalName>
+      <LogicalName>%(EmbeddedResource.RelativeDir)?%(EmbeddedResource.FullPath)</LogicalName>
     </EmbeddedResource>
     <EmbeddedResource Include="..\..\public\Nitrocid.Addons.Essentials\Nitrocid.ThemePacks\Resources\Themes\*.json" Visible="false">
-      <LogicalName>%(EmbeddedResource.RelativeDir)|%(EmbeddedResource.FullPath)</LogicalName>
+      <LogicalName>%(EmbeddedResource.RelativeDir)?%(EmbeddedResource.FullPath)</LogicalName>
     </EmbeddedResource>
     <EmbeddedResource Include="..\..\private\Nitrocid.Generators\Nitrocid.Generators.KnownAddons\Resources\KnownAddons.json" Visible="false">
-      <LogicalName>%(EmbeddedResource.RelativeDir)|%(EmbeddedResource.FullPath)</LogicalName>
+      <LogicalName>%(EmbeddedResource.RelativeDir)?%(EmbeddedResource.FullPath)</LogicalName>
     </EmbeddedResource>
   </ItemGroup>
 
