upd - Updated Terminaux and libraries
---

Type: upd
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Images.Icons/Nitrocid.Extras.Images.Icons.csproj
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Images.Icons/Nitrocid.Extras.Images.Icons.csproj
@@ -8,11 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Terminaux.Images.Icons" Version="8.0.0-20251008161514" />
-    
-    <!-- Remove below once Terminaux 8.0 releases -->
-    <PackageReference Include="Terminaux.Images" Version="8.0.0-20251008161514" />
-    <PackageReference Include="Terminaux" Version="8.0.0-20251008161514" />
+    <PackageReference Include="Terminaux.Images.Icons" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
