imp - prf - Utilized ResourceLab for localization
---

Now, ResourceLab and localization are ready to use for the whole Nitrocid.

This improves first startup performance that took a hit back in June
caused by Windows Defender!

---

Type: imp
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Core/Nitrocid.Core.csproj
+++ b/public/Nitrocid.Core/Nitrocid.Core.csproj
@@ -51,5 +51,8 @@
   <ItemGroup>
     <Compile Remove="$(CompilerGeneratedFilesOutputPath)/**/*.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="ResourceLab" Version="1.0.0" />
+  </ItemGroup>
   <!-- KS Generated End -->
 </Project>
