int - Removed .shproj for shared project
---

.shproj is no longer supported in the .NET SDK for cross-platform.

---

Type: int
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/private/Nitrocid.LocaleChecker/Nitrocid.LocaleChecker.csproj
+++ b/private/Nitrocid.LocaleChecker/Nitrocid.LocaleChecker.csproj
@@ -56,6 +56,8 @@
     <ProjectReference Include="..\..\public\Nitrocid.Analyzers\Nitrocid.Analyzers\Nitrocid.Analyzers.csproj" />
   </ItemGroup>
 
-  <Import Project="..\..\public\Nitrocid.Analyzers\Nitrocid.Analyzers.Common\Nitrocid.Analyzers.Common.projitems" Label="Shared" />
+  <ItemGroup>
+    <Compile Include="..\..\public\Nitrocid.Analyzers\Nitrocid.Analyzers.Common\*.cs" />
+  </ItemGroup>
 
 </Project>
