int - Removed .shproj for shared project
---

.shproj is no longer supported in the .NET SDK for cross-platform.

---

Type: int
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Analyzers/Nitrocid.StandaloneAnalyzer/Nitrocid.StandaloneAnalyzer.csproj
+++ b/public/Nitrocid.Analyzers/Nitrocid.StandaloneAnalyzer/Nitrocid.StandaloneAnalyzer.csproj
@@ -35,6 +35,8 @@
     <PackageReference Include="Terminaux" Version="8.0.2" />
   </ItemGroup>
 
-  <Import Project="..\Nitrocid.Analyzers.Common\Nitrocid.Analyzers.Common.projitems" Label="Shared" />
+  <ItemGroup>
+    <Compile Include="..\Nitrocid.Analyzers.Common\*.cs" />
+  </ItemGroup>
 
 </Project>
