--- a/private/Nitrocid.LocaleChecker/Nitrocid.LocaleChecker.csproj
+++ b/private/Nitrocid.LocaleChecker/Nitrocid.LocaleChecker.csproj
@@ -55,7 +55,8 @@
   <ItemGroup>
     <ProjectReference Include="..\..\public\Nitrocid.Analyzers\Nitrocid.Analyzers\Nitrocid.Analyzers.csproj" />
   </ItemGroup>
-
-  <Import Project="..\..\public\Nitrocid.Analyzers\Nitrocid.Analyzers.Common\Nitrocid.Analyzers.Common.projitems" Label="Shared" />
+  <ItemGroup>
+    <Compile Include="..\..\public\Nitrocid.Analyzers\Nitrocid.Analyzers.Common\*.cs" />
+  </ItemGroup>
 
 </Project>
