add - doc - Implemented ambient sound FX intensity
---

You can now have more control over the ambient sound FX intensity for the
ambient screensaver sounds.

---

Type: add
Breaking: False
Doc Required: True
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Base/Resources/Settings/SettingsEntries.json
+++ b/public/Nitrocid.Base/Resources/Settings/SettingsEntries.json
@@ -1130,10 +1130,13 @@
                 "Description": "NKS_SETTINGS_KERNEL_AUDIO_AMBIENTSCREENSAVEREFFECTS_DESC"
             },
             {
-                "Name": "NKS_SETTINGS_KERNEL_AUDIO_AMBIENTSCREENSAVEREFFECTSINTENSE_NAME",
-                "Type": "SBoolean",
-                "Variable": "EnableAmbientSoundFxIntense",
-                "Description": "NKS_SETTINGS_KERNEL_AUDIO_AMBIENTSCREENSAVEREFFECTSINTENSE_DESC"
+                "Name": "NKS_SETTINGS_KERNEL_AUDIO_AMBIENTSCREENSAVEREFFECTSINTENSITY_NAME",
+                "Type": "SSelection",
+                "Variable": "AmbientSoundFxIntensity",
+                "IsEnumeration": true,
+                "EnumerationInternal": true,
+                "Enumeration": "Misc.Audio.AmbienceFxIntensity",
+                "Description": "NKS_SETTINGS_KERNEL_AUDIO_AMBIENTSCREENSAVEREFFECTSINTENSITY_DESC"
             },
             {
                 "Name": "NKS_SETTINGS_KERNEL_AUDIO_CUEVOLUME_NAME",
