--- a/public/Nitrocid.Analyzers/Nitrocid.StandaloneAnalyzer/Nitrocid.StandaloneAnalyzer.csproj
+++ b/public/Nitrocid.Analyzers/Nitrocid.StandaloneAnalyzer/Nitrocid.StandaloneAnalyzer.csproj
@@ -29,9 +29,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Build.Locator" Version="1.11.1" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="[3.11.0]" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="[5.0.0]" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="[5.0.0]" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="5.0.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="5.0.0" />
     <PackageReference Include="Terminaux" Version="8.0.5" />
   </ItemGroup>
 
