--- a/private/Nitrocid.Analyzers.Test/Nitrocid.Analyzers.Test.csproj
+++ b/private/Nitrocid.Analyzers.Test/Nitrocid.Analyzers.Test.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis" Version="[4.8.0]" />
+    <PackageReference Include="Microsoft.CodeAnalysis" Version="[5.0.0]" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing" Version="1.1.2" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.CodeFix.Testing" Version="1.1.2" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.CodeRefactoring.Testing" Version="1.1.2" />
@@ -14,6 +14,12 @@
     <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic.CodeFix.Testing" Version="1.1.2" />
     <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic.CodeRefactoring.Testing" Version="1.1.2" />
     <PackageReference Include="NuGet.Frameworks" Version="7.0.0" />
+    <PackageReference Include="NuGet.Protocol" Version="7.0.0" />
+    <PackageReference Include="NuGet.Versioning" Version="7.0.0" />
+    <PackageReference Include="NuGet.Configuration" Version="7.0.0" />
+    <PackageReference Include="NuGet.Common" Version="7.0.0" />
+    <PackageReference Include="NuGet.Packaging" Version="7.0.0" />
+    <PackageReference Include="NuGet.Resolver" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
