--- a/public/Nitrocid.Addons.Essentials/Nitrocid.SplashPacks/Resources/AddonSplashSettings.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.SplashPacks/Resources/AddonSplashSettings.json
@@ -56,5 +56,17 @@
                 "Description": "NKS_SPLASHPACKS_SETTINGS_PROGRESS_LOCATION_DESC"
             }
         ]
+    },
+    {
+        "Name": "Welcome2024",
+        "Desc": "NKS_SPLASHPACKS_SETTINGS_SPLASH_WELCOME2024_DESC",
+        "Keys": [
+            {
+                "Name": "NKS_SPLASHPACKS_SETTINGS_SPLASH_WELCOME2024_PROGRESS_NAME",
+                "Type": "SBoolean",
+                "Variable": "Welcome2024ShowProgress",
+                "Description": "NKS_SPLASHPACKS_SETTINGS_SPLASH_WELCOME2024_PROGRESS_DESC"
+            }
+        ]
     }
 ]
