ref - brk|doc - Moved widget-related code to Misc
---

Widgets are no longer just a login component; they are one of the unified
kernel components, so Misc is the next best place. That's because of the
recent changes introduced.

---

Type: ref
Breaking: True
Doc Required: True
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Base/Nitrocid.Base.csproj
+++ b/public/Nitrocid.Base/Nitrocid.Base.csproj
@@ -82,8 +82,8 @@
   <!-- KS Branding (for Photo widget) -->
   <ItemGroup>
     <EmbeddedResource Include="..\Nitrocid\OfficialAppIcon-NitrocidKS-32.png">
-      <LogicalName>Nitrocid.Base.Resources.Login.Widgets.Resources.Photo.Placeholder</LogicalName>
-      <Link>Users/Login/Widgets/Resources/Photo/Placeholder.png</Link>
+      <LogicalName>Nitrocid.Base.Resources.Misc.Widgets.Resources.Photo.Placeholder</LogicalName>
+      <Link>Misc/Widgets/Resources/Photo/Placeholder.png</Link>
     </EmbeddedResource>
   </ItemGroup>
   <!-- KS Branding (for Photo widget) -->
