add - Added skeleton code for KS.RKM
---

This is going to be a new application that allows you to remotely control
a Nitrocid instance.

---

Type: add
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Base/Nitrocid.Base.csproj
+++ b/public/Nitrocid.Base/Nitrocid.Base.csproj
@@ -92,9 +92,13 @@
   <ItemGroup>
     <ProjectReference Include="..\..\private\Nitrocid.Generators\Nitrocid.Generators.KnownAddons\Nitrocid.Generators.KnownAddons.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     <ProjectReference Include="..\..\private\Nitrocid.LocaleChecker\Nitrocid.LocaleChecker.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-    <ProjectReference Include="..\Nitrocid.Core\Nitrocid.Core.csproj" />
   </ItemGroup>
   <!-- KS Generators End -->
+
+  <!-- KS Core -->
+  <ItemGroup>
+    <ProjectReference Include="..\Nitrocid.Core\Nitrocid.Core.csproj" />
+  </ItemGroup>
 
   <!-- KS Package Files -->
   <ItemGroup>
