add - doc - Finalized RKM!
---

We have finalized the RKM application! We'll go through several tests to
make sure that its features work properly.

---

Type: add
Breaking: False
Doc Required: True
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Apps/Nitrocid.Rkm/Nitrocid.Rkm.csproj
+++ b/public/Nitrocid.Apps/Nitrocid.Rkm/Nitrocid.Rkm.csproj
@@ -29,6 +29,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\private\Nitrocid.LocaleChecker\Nitrocid.LocaleChecker.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     <ProjectReference Include="..\..\Nitrocid.Base\Nitrocid.Base.csproj" />
+    <ProjectReference Include="..\..\Nitrocid.Core\Nitrocid.Core.csproj" />
   </ItemGroup>
   <!-- KS.Rkm Locale Checker End -->
 </Project>
