--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
         run: dotnet tool install --global docfx
       - name: Release Asset Preparation
         run: |
-          cmd.exe /c "tools\build.cmd Release -p:ContinuousIntegrationBuild=true"
+          cmd.exe /c "tools\build.cmd Debug -p:ContinuousIntegrationBuild=true"
           cmd.exe /c "tools\pack.cmd"
           cmd.exe /c "tools\docgen.cmd"
           cmd.exe /c "tools\docgen-pack.cmd"
